# sirix-svelte-frontend

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  postcss.config.js  rollup.config.js  sirix-config.js  svelte.config.js  tsconfig.json
.github/: dependabot.yml
resources/: docker-compose.yml  sirix-conf.json  sirix-docker-conf.json  wait.sh
src/: jsconfig.json  sirix.js  sirix.ts  store.js  store.ts  template.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Nav.svelte  VirtualList.svelte
src/components/componentLibrary/: Dropzone.svelte  ProgressBar.svelte  README.md  Radio.svelte  Settings.svelte  VirtualList.svelte  virtualList.js  virtualList.js.map  virtualList.ts
src/components/dbsView/: Add.svelte  AddDatabase.svelte  AddDialog.svelte  AddResource.svelte  Database.svelte  DeleteDialog.svelte  Dropzone.svelte  README.md  Refresh.svelte  Resource.svelte  Resources.svelte  Tree.svelte
src/components/historyView/: Commit.svelte  DiffOption.svelte  History.svelte  Refresh.svelte  Slider.svelte
src/css/: global.css
src/lib/: browser_db.js  browser_db.js.map  browser_db.ts  db.js  db.ts  db_stores.js  db_stores.js.map  db_stores.ts  db_utils.js  db_utils.js.map  db_utils.ts  json_utils.js  tauri_db.js  tauri_db.js.map  tauri_db.ts
src/routes/: _layout.svelte  databases.svelte  index.svelte  login.svelte  query.svelte  resources.svelte  xquery.svelte
src/utils/: transition.ts
static/: global.css  manifest.json
typings/@sapper/: index.d.ts
(+56 files in other folders)
